@@ -29,8 +29,8 @@ function runInPlace() {
         OFFLINE_ARGS="-o"
     fi
 	if $DEBUG; then
-			MAVEN_OPTS="${MAVEN_OPTS} -XX:PermSize=512m -XX:MaxPermSize=1g -Xmx1g -XX:ReservedCodeCacheSize=512m"
-			MAVEN_OPTS="${MAVEN_OPTS} -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=8002,server=y,suspend=n"
+			MAVEN_OPTS="${MAVEN_OPTS} -Xmx1g -XX:ReservedCodeCacheSize=512m"
+			MAVEN_OPTS="${MAVEN_OPTS} -agentlib:jdwp=transport=dt_socket,address=8002,server=y,suspend=n"
 			export MAVEN_OPTS;
 	fi
 	echo $MAVEN_OPTS;
